[develop]
script_dir=$base/lib/era_converter
[install]
install_scripts=$base/lib/era_converter

[options.entry_points]
console_scripts =
    era_publisher = era_converter.era_publisher:main
    era_subscriber = era_converter.era_subscriber:main

[options.data_files]
data_files =
    share/ament_index/resource_index/packages =
        resource/era_converter
    share/era_converter =
        package.xml
    share/era_converter/launch =
        launch/era.launch.py
